hopefully fixing button text showing blue on iOS

--- a/src/components/H2HNavBar/H2HNavBar.module.css
+++ b/src/components/H2HNavBar/H2HNavBar.module.css
@@ -26,6 +26,7 @@
 .next-btn {
   font-size: 2rem;
   line-height: 2.4rem;
+  color: var(--black);
   background-color: var(--white);
   padding: 2rem 3.3rem;
   border-radius: 9rem;
